# surr

./: .pre-commit-config.yaml  README.md  docker-compose.yml  ingress.yaml  livekit.yaml
.github/workflows/: ci.yml
backend/: .gitignore  Dockerfile  alembic.ini  pyproject.toml
backend/src/surr/: database.py  main.py
backend/src/surr/alembic/: env.py
backend/src/surr/alembic/versions/: a621ba756e0f_add_user_table.py
backend/src/surr/app/api/: main.py
backend/src/surr/app/api/v1/: main.py
backend/src/surr/app/api/v1/auth/: schema.py  use_cases.py  views.py
backend/src/surr/app/core/: config.py  rate_limiter.py  security.py
backend/src/surr/app/exceptions/: token_blacklist.py
backend/src/surr/app/models/: __init__.py  rate_limit.py  token_blacklist.py  user.py
backend/src/surr/app/schema/: user.py
backend/tests/: conftest.py  test_auth.py
frontend/: Dockerfile  package-lock.json  package.json
